--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <div class="card1">
+  <main class="card1">
     <div id="Design" class="card">
       <h2>Card1</h2>
       <form>
@@ -24,7 +24,14 @@
         <button>Add Task</button>
       </form>
     </div>
-  </div>
+    <!--button  -->
+    
+<button onclick="createCard()" type="button" class="button">
+  <span class="button__text">Add Item</span>
+  <span class="button__icon"><svg xmlns="http://www.w3.org/2000/svg" width="24" viewBox="0 0 24 24" stroke-width="2" stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" height="24" fill="none" class="svg"><line y2="19" y1="5" x2="12" x1="12"></line><line y2="12" y1="12" x2="19" x1="5"></line></svg></span>
+</button>
+    <!-- button  -->
+  </main>
   <script type="module" src="./app.js"></script>
 </body>
 
