--- a/index.html
+++ b/index.html
@@ -5,32 +5,37 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="./style.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
   <title>Document</title>
 </head>
 
 <body>
   <main class="card1">
-    <div id="Design" class="card">
-      <h2>Card1</h2>
-      <form>
-        <input type="text" placeholder="add task" />
-        <button>Add Task</button>
-      </form>
+    <p class="d-inline-flex gap-1">
+      <a id="btn1" class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button"
+        aria-expanded="false" aria-controls="collapseExample">
+        Add Item
+        <img src="./images/add img.png" width="30%" alt="">
+      </a>
+    </p>
+    <div class="collapse" id="collapseExample">
+      <div id="Design" class="card">
+        <h2>Add Card</h2>
+        <form class="form">
+          <input type="text" required placeholder="Enter Your Heading" />
+          <textarea name="discription" required id="" cols="30"  placeholder="Discription" rows="6"></textarea>
+          <button class="button1"> Add Card 
+          </button>
+        </form>
+      </div>
+
     </div>
-    <div class="card">
-      <h2>Card2</h2>
-      <form>
-        <input type="text" placeholder="add task" />
-        <button>Add Task</button>
-      </form>
-    </div>
-    <!--button  -->
-    
-<button onclick="createCard()" type="button" class="button">
-  <span class="button__text">Add Item</span>
-  <span class="button__icon"><svg xmlns="http://www.w3.org/2000/svg" width="24" viewBox="0 0 24 24" stroke-width="2" stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" height="24" fill="none" class="svg"><line y2="19" y1="5" x2="12" x1="12"></line><line y2="12" y1="12" x2="19" x1="5"></line></svg></span>
-</button>
-    <!-- button  -->
+    <!-- bootstrap -->
+    <br class="br">
   </main>
   <script type="module" src="./app.js"></script>
 </body>
