--- a/index.html
+++ b/index.html
@@ -26,13 +26,14 @@
       <div id="Design" class="card">
         <h2>Add Card</h2>
         <form class="form">
-          <input type="text" required placeholder="Enter Your Heading" />
+          <input class="styling" type="text" required placeholder="Enter Your Heading" />
           <textarea name="discription" required id="" cols="30"  placeholder="Discription" rows="6"></textarea>
           <button class="button1"> Add Card 
           </button>
-        </form>
+        </form >
       </div>
-
+      <!-- <img src="./images/edit img.png" alt=""> -->
+      
     </div>
     <!-- bootstrap -->
     <br class="br">
