--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <main class="card1">
-    <p class="d-inline-flex gap-1">
+    <p d class="d-inline-flex gap-1">
       <a id="btn1" class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button"
         aria-expanded="false" aria-controls="collapseExample">
         Add Item
@@ -32,10 +32,14 @@
         </form >
       </div>
       <!-- <img src="./images/edit img.png" alt=""> -->
-      
     </div>
+
+      
     <!-- bootstrap -->
     <br class="br">
+    <div class="add">
+
+    </div>
   </main>
   <script type="module" src="./app.js"></script>
 </body>
